<?xml version="1.0" encoding="utf-8"?>
<!--
     Copyright (C) 2023 AtigaOS Projec5

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

     http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <!-- Genera -->
    <string name="genera_summary">Genera customization features</string>
    <string name="genera_title">Genera</string>

    <!-- 4G icon -->
    <string name="show_fourg_icon_title">4G icon</string>
    <string name="show_fourg_icon_summary">Display 4G icon in signal icon instead LTE</string>

    <!-- Atiga Logo -->
    <string name="status_bar_logo_title">Statusbar Logo</string>
    <string name="status_bar_logo_summary">Display a Atiga logo on left of the status bar</string>

    <!-- Battery Bar -->
    <string name="battery_bar_title">Battery bar</string>
    <string name="battery_bar_summary">Display and customize battery bar above status bar</string>
    <string name="battery_bar_color">Color</string>
    <string name="battery_bar_charging_color">Charging color</string>
    <string name="battery_bar_battery_low_color">Low battery color</string>
    <string name="battery_bar_style_title">Alignment</string>
    <string name="battery_bar_thickness_title">Thickness</string>
    <string name="battery_bar_animate_title">Charging animation</string>
    <string name="battery_bar_style_regular">Regular</string>
    <string name="battery_bar_style_center_mirrored">Center-mirrored</string>
    <string name="battery_bar_style_reversed">Reversed</string>
    <string name="battery_bar_use_charging_color">Custom charging color</string>
    <string name="battery_bar_blend_color_title">Blend colors</string>
    <string name="battery_bar_blend_color_summary">Blend full/empty colors corresponding to battery percentage</string>
    <string name="battery_bar_blend_color_reverse_title">Reverse color direction</string>
    <string name="battery_bar_blend_color_reverse_summary_off">Full &#8594; empty: red &#8592; green &#8592; blue &#8592; red</string>
    <string name="battery_bar_blend_color_reverse_summary_on">Full &#8594; empty: red &#8594; green &#8594; blue &#8594; red</string>

    <!-- Call strength icons -->
    <string name="show_qs_call_strength_icon_title">Show call strength icon(s)</string>
    <string name="show_qs_call_strength_icon_summary">Show call strength icons in QuickSettings panel when available</string>

    <!-- Categories -->
    <string name="kategori_gesture">Gesture</string>
    <string name="kategori_statusbar">Statusbar</string>

    <!-- Clock background chip -->
    <string name="statusbar_clock_chip_title">Background chip</string>
    <string name="statusbar_clock_chip_summary">Display accented chip behind clock</string>

    <!-- Combined signal icons in status bar -->
    <string name="combined_status_bar_signal_icons_title">Combined signal icons</string>
    <string name="combined_status_bar_signal_icons_summary">Show single combined icon for WiFi and mobile signal</string>

    <!-- Color Picker -->
    <string name="dialog_color_picker">Color Picker</string>
    <string name="press_color_to_apply">Press on color below to apply</string>
    <string name="arrow_right" translatable="false">→</string>
    <string name="arrow_down" translatable="false">↓</string>
    <string name="hex" translatable="false">Hex:</string>
    <string name="hex_hint" translatable="false">#ff000000</string>
    <string name="set">Set</string>
    <string name="color_default">Default</string>

    <!-- CustomSeekBar -->
    <string name="custom_seekbar_value">Value: <xliff:g id="v">%s</xliff:g></string>
    <string name="custom_seekbar_default_value">by default</string>
    <string name="custom_seekbar_default_value_to_set">Default value: <xliff:g id="v">%s</xliff:g>\nLong tap to set</string>
    <string name="custom_seekbar_default_value_is_set">Default value is set</string>

    <!-- Three-fingers-swipe to screenshot -->
    <string name="three_finger_gesture">Swipe to screenshot</string>
    <string name="three_finger_gesture_summary">Swipe three fingers to take screenshot</string>

    <!-- Units -->
    <string name="unit_seconds">seconds</string>
    <string name="unit_milliseconds">milliseconds</string>
    <string name="unit_pixels" translatable="false">dp</string>
    <string name="unit_hz" translatable="false">hz</string>

    <!-- Wifi/Bluetooth auto timeout -->
    <string name="wifi_timeout">WiFi timeout</string>
    <string name="wifi_timeout_summary">Do not automatically turn off WiFi</string>
    <string name="wifi_timeout_summary_auto">WiFi will turn off after <xliff:g id="timeout_description">%1$s</xliff:g> if no network connected</string>
    <string name="bluetooth_timeout">Bluetooth timeout</string>
    <string name="bluetooth_timeout_summary">Do not automatically turn off Bluetooth</string>
    <string name="bluetooth_timeout_summary_auto">Bluetooth will turn off after <xliff:g id="timeout_description">%1$s</xliff:g> if no devices connected</string>
    <string name="custom_timeout_summary_never">Never</string>
    <string name="custom_timeout_summary_15secs">15 seconds</string>
    <string name="custom_timeout_summary_30secs">30 seconds</string>
    <string name="custom_timeout_summary_1min">1 minute</string>
    <string name="custom_timeout_summary_2mins">2 minutes</string>
    <string name="custom_timeout_summary_5mins">5 minutes</string>
    <string name="custom_timeout_summary_10mins">10 minutes</string>
    <string name="custom_timeout_summary_30mins">30 minutes</string>
    <string name="custom_timeout_summary_1hour">1 hour</string>
    <string name="custom_timeout_summary_2hours">2 hours</string>
    <string name="custom_timeout_summary_4hours">4 hours</string>
    <string name="custom_timeout_summary_8hours">8 hours</string>
</resources>
