<?xml version="1.0" encoding="utf-8"?>
<!--
  Copyright (C) 2023 The AtigaOS Project

  Licensed under the Apache License, Version 2.0 (the "License");
  you may not use this file except in compliance with the License.
  You may obtain a copy of the License at

       http://www.apache.org/licenses/LICENSE-2.0

  Unless required by applicable law or agreed to in writing, software
  distributed under the License is distributed on an "AS IS" BASIS,
  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  See the License for the specific language governing permissions and
  limitations under the License.
  -->
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:settings="http://schemas.android.com/apk/res-auto"
    android:key="top_level_genera"
    android:title="@string/genera_title" >

    <!-- Statusbar -->
    <PreferenceCategory
        android:key="kategori_statusbar"
        android:order="1"
        android:selectable="false"
        android:title="@string/kategori_statusbar" />

    <!-- Battery Bar -->
    <PreferenceScreen
        android:fragment="org.genera.settings.statusbar.BatteryBar"
        android:icon="@drawable/ic_car_battery"
        android:key="batterybar"
        android:order="2"
        android:summary="@string/battery_bar_summary"
        android:title="@string/battery_bar_title" />

    <!-- Custom Logo -->
    <org.genera.settings.preferences.SystemSettingSwitchPreference
        android:key="status_bar_logo"
        android:title="@string/status_bar_logo_title"
        android:summary="@string/status_bar_logo_summary" />

</PreferenceScreen>
